changing to virtual threads scenario 7